syntax = "proto3";

package mikebway.cart;

import "google/type/timestamp.proto";
import "mikebway/cart/item.proto";
import "mikebway/types/address.proto";
import "mikebway/types/person.proto";

option go_package = "github.com/mikebway/poc-gcp-ecomm/pb/cart";

// A shopping cart collects the cart items that a shopper is considering purchasing
// or has purchased. A cart should be considered immutable once purchase has been
// processed.
//
// It is persisted in the cart datastore kind.
message ShoppingCart {
  // TODO: Add version field (for the schema)

  // A UUID ID in hexadecimal string form - a unique ID for this cart.
  // This will be set by the cart service when the cart is first created.
  string id = 1;

  // The time at which shopping cart was first instantiated
  google.protobuf.Timestamp creation_time = 2;

  // Optional. The time at which shopping cart was closed, either  as
  // abandoned or submitted / checked out. See the Status to determine which
  google.protobuf.Timestamp closed_time = 3;

  // The state of the shopping cart as an enumerated value
  ShoppingCartStatus status = 4;

  // The person who opened the shopping cart
  mikebway.types.Person shopper = 5;

  // The delivery address for the order
  mikebway.types.PostalAddress delivery_address = 6;

  // Cart items is the list of one to many items that make up the potential order
  repeated CartItem cart_items = 7;
}

// An enumeration of shopping cart states
enum ShoppingCartStatus {
  SCS_UNSPECIFIED = 0;
  SCS_OPEN = 1;
  SCS_CHECKED_OUT = 2;
  SCS_ABANDONED_BY_USER = 3;
  SCS_ABANDONED_BY_TIMEOUT = 4;
}
